--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ES2017",
     "module": "commonjs",
+    "jsx": "react-native",
     "isolatedModules": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
