chore: implement the sample test

--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "react": "19.1.0",
-    "react-native": "0.80.1"
+    "react-native": "0.80.1",
+    "react-native-voice-stream": "git+https://github.com/dietdoctor/react-native-voice-stream.git"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
