chore: refer ios implementation in the example app

--- a/example/ios/VoiceStreamExample/Info.plist
+++ b/example/ios/VoiceStreamExample/Info.plist
@@ -49,5 +49,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) needs access to your microphone to capture your voice and analyze your meal description.</string>
 </dict>
 </plist>
