--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "react": "19.1.0",
     "react-native": "0.80.1",
-    "react-native-voice-stream": "git+https://github.com/dietdoctor/react-native-voice-stream.git"
+    "react-native-voice-stream": "../"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
