--- a/package.json
+++ b/package.json
@@ -7,18 +7,25 @@
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
   "types": "lib/typescript/index.d.ts",
+  "react-native": "src/index.ts",
   "files": [
     "src",
     "lib",
     "ios",
+    "android",
     "react-native-voice-stream.podspec",
-    "!android",
+    "react-native.config.js",
     "!cpp",
     "!lib/typescript/example",
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__"
   ],
+  "codegenConfig": {
+    "name": "RNVoiceStreamSpec",
+    "type": "modules",
+    "jsSrcsDir": "src"
+  },
   "scripts": {
     "typecheck": "tsc",
     "clean": "del-cli lib",
@@ -33,7 +40,8 @@
     "stream",
     "base-64",
     "native-module",
-    "ios"
+    "ios",
+    "android"
   ],
   "repository": "https://github.com/dietdoctor/react-native-voice-stream",
   "author": "Omal Perera <omalperera8@gmail.com>",
