--- a/example/package.json
+++ b/example/package.json
@@ -25,6 +25,7 @@
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
     "@types/react": "^19.1.0",
+    "@types/react-native": "^0.73.0",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "prettier": "2.8.8",
