--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "source": "src/index.ts",
   "main": "lib/commonjs/index.js",
   "module": "lib/module/index.js",
-  "types": "lib/typescript/index.d.ts",
+  "types": "lib/typescript/src/index.d.ts",
   "react-native": "src/index.ts",
   "files": [
     "src",
@@ -21,11 +21,6 @@
     "!**/__fixtures__",
     "!**/__mocks__"
   ],
-  "codegenConfig": {
-    "name": "RNVoiceStreamSpec",
-    "type": "modules",
-    "jsSrcsDir": "src"
-  },
   "scripts": {
     "typecheck": "tsc",
     "clean": "del-cli lib",
