fix: avoid codegen on the sample app

--- a/package.json
+++ b/package.json
@@ -66,7 +66,12 @@
     "targets": [
       "commonjs",
       "module",
-      "typescript"
+      [
+        "typescript",
+        {
+          "project": "tsconfig.build.json"
+        }
+      ]
     ],
     "exclude": "**/{__tests__,__fixtures__,__mocks__}/**"
   }
