--- a/example/package.json
+++ b/example/package.json
@@ -10,13 +10,10 @@
   },
   "dependencies": {
     "react": "19.1.0",
-    "react-native": "0.80.1",
-    "react-native-voice-stream": "../"
+    "react-native": "0.80.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@babel/preset-env": "^7.25.3",
-    "@babel/runtime": "^7.25.0",
     "@react-native-community/cli": "19.0.0",
     "@react-native-community/cli-platform-android": "19.0.0",
     "@react-native-community/cli-platform-ios": "19.0.0",
@@ -24,13 +21,7 @@
     "@react-native/eslint-config": "0.80.1",
     "@react-native/metro-config": "0.80.1",
     "@react-native/typescript-config": "0.80.1",
-    "@types/react": "^19.1.0",
-    "@types/react-native": "^0.73.0",
-    "@types/react-test-renderer": "^19.1.0",
-    "eslint": "^8.19.0",
-    "prettier": "2.8.8",
-    "react-test-renderer": "19.1.0",
-    "typescript": "5.0.4"
+    "babel-plugin-module-resolver": "^5.0.2"
   },
   "engines": {
     "node": ">=18"
