--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.0.1",
   "description": "A real-time voice streaming as base-64 string chunks",
   "summary": "A real-time voice streaming as base-64 string chunks",
-  "source": "src/index.ts",
-  "main": "lib/commonjs/index.js",
-  "module": "lib/module/index.js",
+  "main": "lib/commonjs/index",
+  "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
-  "react-native": "src/index.ts",
+  "react-native": "src/index",
+  "source": "src/index",
   "files": [
     "src",
     "lib",
@@ -18,7 +18,8 @@
     "!lib/typescript/example",
     "!**/__tests__",
     "!**/__fixtures__",
-    "!**/__mocks__"
+    "!**/__mocks__",
+    "!example"
   ],
   "scripts": {
     "typecheck": "tsc",
@@ -30,6 +31,7 @@
   },
   "keywords": [
     "react-native",
+    "microphone",
     "voice",
     "stream",
     "base-64",
@@ -48,9 +50,14 @@
     "Omal Perera <omalperera8@gmail.com>"
   ],
   "devDependencies": {
+    "@babel/runtime": "^7.27.6",
     "@react-native-community/bob": "^0.17.1",
     "@types/react": "^19.1.6",
     "del-cli": "^6.0.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.5.1",
+    "prettier": "^3.6.2",
     "react": "18.2.0",
     "release-it": "^15.6.0",
     "typescript": "^4.9.5"
@@ -58,6 +65,13 @@
   "peerDependencies": {
     "react": "*",
     "react-native": ">=0.68.0"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/example/node_modules",
+      "<rootDir>/lib/"
+    ]
   },
   "@react-native-community/bob": {
     "source": "src",
